INCLUDES = @LIBXMLPP_CFLAGS@ @XML_CFLAGS@
LDADD = @LIBXMLPP_LIBS@

bin_PROGRAMS = earth
earth_SOURCES = \
	earth.cpp \
	Dir.cpp Dir.h \
	FsObject.cpp FsObject.h \
	ImageFormat.cpp ImageFormat.h \
	Size.cpp Size.h \
	UserGroup.cpp UserGroup.h \
	ImageSeq.cpp ImageSeq.h \
	Image.cpp Image.h \
	LibLoader.cpp LibLoader.h \
	DateTime.cpp DateTime.h \
	File.cpp File.h \
	ImageDim.cpp ImageDim.h \
	Path.cpp Path.h \
	User.cpp User.h \
	Frames.cpp Frames.h \
	IndexDirectory.cpp IndexDirectory.h
